# jlj

./: .gitignore  .gitmodules
src/dm_humanoid/: CMakeLists.txt  README.md  USAGE_GUIDE.md  package.xml
src/dm_humanoid/config/: dm_humanoid_29.yaml
src/dm_humanoid/config/parallel/: left_ankle.yaml  right_ankle.yaml  waist.yaml
src/dm_humanoid/include/dm_humanoid/: ankle_parallel_web_node.hpp  parallel_joint_adapter.hpp  parallel_kinematics.hpp
src/dm_humanoid/launch/: dm_humanoid_bringup.launch.py  fixed_passive_test.launch.py
src/dm_humanoid/src/: ankle_parallel_web_main.cpp  ankle_parallel_web_node.cpp  dm_humanoid_control_node.cpp  dm_humanoid_system_check_node.cpp  parallel_joint_adapter.cpp  parallel_kinematics.cpp
src/dm_humanoid/web/ankle_parallel/: app.js  index.html  styles.css
src/dm_imu/: CMakeLists.txt  UDEV_SETUP.md  package.xml
src/dm_imu/config/: 99-dm-imu.rules
src/dm_imu/include/dm_imu/: imu_driver.h
src/dm_imu/launch/: imu_visual_test.launch.py
src/dm_imu/rviz/: imu_visual_test.rviz
src/dm_imu/src/: imu_driver.cpp  imu_visual_test_node.cpp  test_imu.cpp
src/dm_joy/: CMakeLists.txt  README.md  package.xml
src/dm_joy/launch/: dm_joy.launch.py
src/dm_joy/src/: dm_joy_monitor_node.cpp  dm_joy_node.cpp
src/dm_motor/: CMakeLists.txt  README.md  USAGE_GUIDE.md  package.xml
src/dm_motor/config/: dm_motor_29.yaml
src/dm_motor/include/dm_motor/: damiao_protocol.hpp  dm_motor_driver.hpp  dm_motor_manager.hpp  dm_motor_node.hpp  dm_motor_test_node.hpp  dm_motor_web_node.hpp  socketcan_transport.hpp  types.hpp
src/dm_motor/scripts/: start_can_bridge.sh
src/dm_motor/src/: damiao_protocol.cpp  dm_motor_driver.cpp  dm_motor_main.cpp  dm_motor_manager.cpp  dm_motor_node.cpp  dm_motor_test_main.cpp  dm_motor_test_node.cpp  dm_motor_web_main.cpp  dm_motor_web_node.cpp  socketcan_transport.cpp
src/dm_motor/web/: app.js  index.html  styles.css
src/dm_test/: CMakeLists.txt  README.md  package.xml
src/dm_test/config/: both_arms_alternating_swing.csv  dm_test_trajectories.yaml  left_arm_swing_from_mjcf.csv  right_arm_swing_from_mjcf.csv  whole_body_zoulu.csv
src/dm_test/include/dm_test/: dm_trajectory_test_node.hpp
src/dm_test/launch/: arm_trajectory_test.launch.py  whole_body_trajectory_test.launch.py
src/dm_test/scripts/: convert_whole_body_csv.py  evaluate_tracking.py  example_error_joint_states.csv  realtime_plot_tracking.py
src/dm_test/src/: dm_trajectory_test_main.cpp  dm_trajectory_test_node.cpp
src/my_test/: package.xml  setup.py
src/my_test/my_test/: demo_node.py
tmp/mock_dm_motor_ui/: index.html  render_mock_screenshot.py  styles.css
